Mon Apr 25 01:18:43 2005  Tanaka Akira  <akr@m17n.org>

        * oniguruma.h (OnigWarnFunc): add a variadic argument.
	[ruby-core:4751]

Sat Apr 23 19:49:21 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tcltklib.c (ip_RubyExitCommand): exit with status code
	  via TclTkIp#_eval didn't work. [ruby-talk:139390]

Sat Apr 23 11:45:29 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_provided): should check also path name to be loaded.
	  fixed: [ruby-dev:26093]

Fri Apr 22 16:55:35 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tcltklib.c (ip_set_exc_message): fixed memory leak.

	* ext/tk/tcltklib.c: eTkCallbackReturn was not initialized.

Thu Apr 21 06:45:28 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_incpush_expand, proc_options): expand relative path
	  given with -I option.  [ruby-dev:26090]

	* configure.in, lib/mkmf.rb, {bcc32,win32,wince}/Makefile.sub: improve
	  C++ support.  [ruby-dev:26089]

Thu Apr 21 01:53:09 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: add rdoc.

Thu Apr 21 00:07:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): support platforms have file separator
	  other than /.

	* {bcc32,win32,wince}/Makefile.sub (BUILD_FILE_SEPARATOR): separator
	  of building platform.

	* {bcc32,win32,wince}/Makefile.sub (CP, INSTALL): use COPY command.

Wed Apr 20 23:22:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk: miniruby depens on MINIOBJS.

	* dmydln.c (dln_load): dummy function to raise LoadError.

	* cygwin/GNUmakefile.in, {bcc32,win32,wince}/Makefile.sub: miniruby
	  can't load extensions on Windows.

Wed Apr 20 23:01:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/ifchange.bat: delete testing files.

Wed Apr 20 22:54:54 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: new method Net::HTTP.post_form.

	* lib/net/http.rb: new method Net::HTTPHeader#set_form_data and
	  its alias #form_data=.
